--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,29 @@
+altgraph==0.17.4
+cramjam==2.9.0
+distlib==0.3.8
 et-xmlfile==1.1.0
-numpy==2.1.0
+fastparquet==2024.11.0
+filelock==3.15.4
+fsspec==2024.10.0
+llvmlite==0.43.0
+numba==0.60.0
+numpy==2.0.2
 openpyxl==3.1.5
+packaging==24.2
 pandas==2.2.2
+pefile==2023.2.7
+platformdirs==4.2.2
+pyarrow==18.1.0
+pyinstaller==6.11.1
+pyinstaller-hooks-contrib==2024.10
 PyQt5==5.15.11
 PyQt5-Qt5==5.15.2
 PyQt5_sip==12.15.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
+pywin32-ctypes==0.2.3
+setuptools==75.6.0
 six==1.16.0
 tzdata==2024.1
+virtualenv==20.26.3
+wheel==0.45.1
