--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 altgraph==0.17.4
+colorama==0.4.6
 cramjam==2.9.0
 distlib==0.3.8
 et-xmlfile==1.1.0
@@ -16,14 +17,16 @@ platformdirs==4.2.2
 pyarrow==18.1.0
 pyinstaller==6.11.1
 pyinstaller-hooks-contrib==2024.10
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.2
-PyQt5_sip==12.15.0
+PySide6==6.8.2.1
+PySide6_Addons==6.8.2.1
+PySide6_Essentials==6.8.2.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
 pywin32-ctypes==0.2.3
 setuptools==75.6.0
+shiboken6==6.8.2.1
 six==1.16.0
+tqdm==4.67.1
 tzdata==2024.1
 virtualenv==20.26.3
 wheel==0.45.1
